--- a/AdminWeb/wwwroot/css/style.css
+++ b/AdminWeb/wwwroot/css/style.css
@@ -3720,9 +3720,10 @@ nav.page-tabs .page-tabs-content {
     left: auto;
 }
 
-#content-main {
-    height: calc(100% - 140px);
-    overflow: hidden;
+#content-main { 
+    /*height: calc(100% - 140px);*/
+    height: calc(100% - 104px); 
+    overflow: hidden; 
 }
 
 .fixed-nav #content-main {
